--- a/flows.html
+++ b/flows.html
@@ -44,6 +44,13 @@
     <button id="btnRefresh" class="btn">Refresh</button>
     <button id="btnDownload" class="btn">Download SVG</button>
   </div>
+  <div style="margin:12px 0">
+  <a href="https://www.sltx.org/filings/" target="_blank" 
+     style="color:#4f46e5; font-weight:600; text-decoration:none">
+    ➜ Open Texas Filing Website
+  </a>
+</div>
+
 
   <div id="chart"><div id="m" class="mermaid">Loading…</div></div>
 
